<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequentContactsHeading"
            android:textSize="40dp"
            android:textColor="#000000"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/FC01"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequent_contact_1_button" />

        <Button
            android:id="@+id/FC02"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequent_contact_2_button" />

        <Button
            android:id="@+id/FC03"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequent_contact_3_button" />

        <Button
            android:id="@+id/FC04"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequent_contact_4_button" />

        <Button
            android:id="@+id/FC05"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/frequent_contact_5_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>