<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SettingsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SettingsHeading"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="#000000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Setting01"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Setting01"
                    android:textAlignment="viewStart"
                    android:textSize="20dp"
                    android:textColor="#000000"/>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Setting02"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textSize="20dp"
                    android:textColor="#000000"
                    android:text="@string/Setting02"
                    android:layout_weight="1"/>

                <Space
                    android:layout_width="420dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/SettingsSmallTextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/SettingsSmallText" />

                        <RadioButton
                            android:id="@+id/SettingsMediumTextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/SettingsMediumText" />

                        <RadioButton
                            android:id="@+id/SettingsLargeTextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/SettingsLargeText" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>