<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UserProfileHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:paddingTop="20sp"
            android:paddingBottom="5sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ProfilePicture"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/default_profile_display"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/UserBio"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:text="Bio Placeholder"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/UserAboutButton"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/UserAboutButton"
                android:onClick="openAboutActivity"
                android:background="@drawable/btn_rounded"/>

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/UserProfilePhotos"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/UserProfilePhotosButton"
                android:background="@drawable/btn_rounded"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/ChangeDisplayPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="SET DISPLAY PICTURE"
            android:background="@drawable/btn_rounded"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>